--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <meta property="og:image" content="preview_image.png">
         <meta property="og:image:width" content="600">
         <meta property="og:image:height" content="337">
+        <meta name="google-adsense-account" content="ca-pub-4703431616802452">
     
         <!-- Favicon Links -->
         <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
