--- a/Blog.html
+++ b/Blog.html
@@ -31,6 +31,7 @@
 
 
     <!-- Basic Meta Tags -->
+    <meta name="google-adsense-account" content="ca-pub-4703431616802452">
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
