--- a/Blog.html
+++ b/Blog.html
@@ -74,7 +74,7 @@
 <!-- Header Section -->
 <header>
     <div class="header-container">
-        <a href="blog.html">
+        <a href="Blog.html">
             <h1 class="logo">How To Use</h1>
         </a>
         
