support popup is added

--- a/Blog.html
+++ b/Blog.html
@@ -515,7 +515,18 @@
     
 
 </main>
-
+<div id="support-popup" class="support-popup">
+    <div class="popup-content">
+        <button class="close-btn" onclick="closePopup()">✖</button>
+        <h2>🌟 Support Us 🌟</h2>
+        <p>If you love this site and appreciate our free premium features, we invite you to show your support! 💖</p>
+        <p>Your contributions help us maintain and improve the site, allowing us to provide you with the best experience possible. 🙏</p>
+        <p>Whether it’s ₹1, ₹10, or ₹100, every little bit matters and keeps us running smoothly! ❤️</p>
+        <p>👉 Click below to learn more about how you can support us and make a difference!</p>
+        <button class="learn-more-btn" onclick="redirectToSupport()">Learn More ➡️</button>
+    </div>
+  </div>
+        
 
 
 <!-- Footer Section -->
