--- a/index.html
+++ b/index.html
@@ -663,9 +663,21 @@
     <img src="support_QR.jpeg" alt="UPI Payment QR Code" class="upi-qr-code">
   </div>
 
-  <p>Your support, whether it’s ₹1, ₹100, or ₹1000, can help us keep delivering premium features at no cost. Every little bit matters!</p>
+  <p>Your support, whether it’s ₹1, ₹10, or ₹100, can help us keep delivering premium features at no cost. Every little bit matters!</p>
 </div>
 
+
+<div id="support-popup" class="support-popup">
+  <div class="popup-content">
+      <button class="close-btn" onclick="closePopup()">✖</button>
+      <h2>🌟 Support Us 🌟</h2>
+      <p>If you love this site and appreciate our free premium features, we invite you to show your support! 💖</p>
+      <p>Your contributions help us maintain and improve the site, allowing us to provide you with the best experience possible. 🙏</p>
+      <p>Whether it’s ₹1, ₹10, or ₹100, every little bit matters and keeps us running smoothly! ❤️</p>
+      <p>👉 Click below to learn more about how you can support us and make a difference!</p>
+      <button class="learn-more-btn" onclick="redirectToSupport()">Learn More ➡️</button>
+  </div>
+</div>
       
   <div class="button-container">       
       <button id="generate_pdf" class="buttontype_2" onclick="generatePDF()">Generate PDF</button>
