--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
       <div class="menu-icon-main" onclick="toggleNav()">☰</div>
       <ul>
         
-        <li><a href="index.html">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="#About">About</a></li>
-        <li><a href="Blog.html">How To Use</a></li>
+        <li><a href="Blog/">How To Use</a></li>
         <li><a href="#Contact">Contact</a></li>
         <li><a href="#support">Support-Us</a></li>
       </ul>
@@ -456,7 +456,7 @@
                     <details class="info-container">
                       <summary class="info-icon">i</summary>
                       <div class="info-box">
-                        <p>For more fonts see the FAQs section <a href="Blog.html#faqs">FAQs</a></p>
+                        <p>For more fonts see the FAQs section <a href="/Blog#faqs">FAQs</a></p>
                       </div>
                     </details>
                     :
@@ -739,7 +739,7 @@
       <p>
         "Check out our detailed guide on how to use this ."
       </p>
-      <button onclick="window.location.href='Blog.html'">
+      <button onclick="window.location.href='/Blog'">
         Get Started
       </button>
     </div>
@@ -847,7 +847,7 @@
   
           <div class="contact-item">
             <h3>FAQ</h3>
-            <p><a href="Blog.html#faqs" target="_blank">Check our FAQ section</a></p>
+            <p><a href="/Blog#faqs" target="_blank">Check our FAQ section</a></p>
             <p class="note">Find quick answers to common questions</p>
           </div>
         </div>
