--- a/index.html
+++ b/index.html
@@ -4,15 +4,42 @@
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4703431616802452"
      crossorigin="anonymous"></script>
+
+     <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-K75CVML6');</script>
+  <!-- End Google Tag Manager -->
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9N9V3HXNYT"></script>
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-9N9V3HXNYT"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
     
       gtag('config', 'G-9N9V3HXNYT');
-    </script>
+    </script> -->
+
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-9N9V3HXNYT"></script>
+<!-- Google Consent Mode -->
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  
+  gtag('consent', 'default', {
+      'ad_storage': 'denied',
+      'analytics_storage': 'denied',
+      'ad_user_data': 'denied',
+      'ad_personalization': 'denied'
+  });
+
+    // Load Google Analytics
+    gtag('js', new Date());
+    gtag('config', 'G-9N9V3HXNYT');
+</script> 
+
     <script type="text/javascript">
     (function(c,l,a,r,i,t,y){
         c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -108,6 +135,10 @@
 
 </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K75CVML6"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
     <header>
       <h1>Text to Handwriting </h1>
       
@@ -931,7 +962,13 @@
             <p>By using our Text to Handwriting Service, you acknowledge and accept these terms in their entirety.</p>
         </div>
     </div>
-  
+  <!-- cookie -->
+  <div id="cookie-banner">
+    <p>We use cookies to improve your experience. By accepting, you allow us to collect data for analytics and advertising.</p>
+    <button id="accept-cookies" class="cookie-btn">Accept</button>
+    <button id="reject-cookies" class="cookie-btn reject-btn">Reject</button>
+</div>
+
 
   <footer id="footer" class="footer-container">
     <div class="footer-links">
