--- a/index.html
+++ b/index.html
@@ -37,13 +37,7 @@
     gtag('config', 'G-9N9V3HXNYT');
 </script>
 
-    <script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "ork3584d36");
-    </script>
+    
         <!-- Basic Meta Tags -->
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -958,13 +952,13 @@
     </div>
    <!-- Cookie Consent Banner -->
    <div id="cookie-banner">
-    <p>This site uses cookies to improve user experience, provide personalized content.</p>
+    <p>We use cookies to enhance your browsing experience, analyze site traffic, and serve personalized content. By clicking 'Accept', you consent to our use of cookies. You can manage your preferences anytime.</p>
     <div id="cookie-buttons">
       <button class="cookie-btn accept-btn" onclick="acceptCookies()">Accept</button>
       <button class="cookie-btn deny-btn" onclick="denyCookies()">Deny</button>
     </div>
   </div>
-
+  <button id="manage-cookies" style="display: none;" onclick="manageCookies()">Manage Cookies</button>
   <footer id="footer" class="footer-container">
     <div class="footer-links">
         <a href="mailto:mahipalkumawat810@gmail.com" target="_blank" class="footer-link">Gmail</a>
