--- a/index.html
+++ b/index.html
@@ -133,6 +133,65 @@
         <li><a href="#support">Support-Us</a></li>
       </ul>
     </nav>
+    <div
+  style="
+    position: fixed;
+    top: 64px; /* adjust to your navbar height */
+    left: 0;
+    width: 100%;
+    z-index: 9998;
+
+    background: linear-gradient(90deg, #ff512f, #f09819);
+    color: #ffffff;
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+    font-size: 15px;
+    font-weight: 600;
+
+    padding: 12px 16px;
+    box-sizing: border-box;
+    text-align: center;
+
+    box-shadow: 0 4px 14px rgba(0, 0, 0, 0.35);
+
+    animation: updatePulse 2.2s ease-in-out infinite;
+  "
+>
+  <span>
+    🚀 <strong>New Version Live!</strong>
+    Experience the latest update at
+    <a
+      href="https://texttohandwriting.tech"
+      target="_blank"
+      rel="noopener"
+      style="
+        margin-left: 8px;
+        padding: 6px 12px;
+
+        background: #ffffff;
+        color: #ff512f;
+
+        border-radius: 999px;
+        font-weight: 700;
+        text-decoration: none;
+
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
+        display: inline-block;
+      "
+    >
+      texttohandwriting.tech →
+    </a>
+  </span>
+
+  <style>
+    @keyframes updatePulse {
+      0%   { box-shadow: 0 4px 14px rgba(0,0,0,0.35); }
+      50%  { box-shadow: 0 6px 22px rgba(255,255,255,0.35); }
+      100% { box-shadow: 0 4px 14px rgba(0,0,0,0.35); }
+    }
+  </style>
+</div>
+
 
 
    <!-- Why Us Section -->
